# datafrittata-twitch-chatbot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dev-requirements.txt  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  t.py  todo.md
.github/workflows/: pytest.yml
.vim/: coc-settings.json
chatbot/: __main__.py  bot.py  bot_env_vars.env.sample  chatbot.py  commands.py  config.py  db.py
src/: __main__.py  bot_data.json  bot_env_vars.env.sample  chatbot.py  commands.py  config.py  data.py  db.py
tests/: test_Commands.py
