[tool.poetry]
name = "datafrittata-twitch-chatbot"
version = "0.0.0"
description = ""
authors = ["Bastien Boutonnet <bastien.b1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.18.0"
irc = "^19.0.1"
rich = "^10.5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
